--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,258 @@
-<p>projects works!</p>
+<nav class="customnav">
+    <div class="container-fluid">
+        <div class="logo">
+            <a href="#">Your Logo</a>
+        </div>
+        <div id="mainListDiv" class="main_list">
+            <ul class="navlinks">
+                <li><a href="/challenges">Challenges</a></li>
+                <li><a href="/labs">Labs</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="">Profile</a></li>
+            </ul>
+        </div>
+        <span class="navTrigger">
+            <i></i>
+            <i></i>
+            <i></i>
+        </span>
+    </div>
+</nav>
+
+<div class="bg">
+</div>
+<div class="container-fluid bgcontent">
+    <div class="title center">
+        <h1>MY WORK</h1>
+    </div>
+    <div class="container-fluid content">
+        <ngb-accordion>
+            <ngb-panel>
+                <ng-template ngbPanelTitle>
+                    <div class="justify-content-between" style="justify-content: space-between; max-width: 100%">
+                        <div class="d-flex pull-left" style="color: #303030;">
+                            <h4 class="tabtitle" style="font-size: 28px; font-weight: bolder">Projects</h4>
+                        </div>
+                        <div class="pull-right"><i class="fa fa-chevron-down"></i></div>
+                    </div>
+                </ng-template>
+
+                <ng-template ngbPanelContent>
+                    <div class="d-flex float-right add">Add new project &nbsp;&nbsp;<i class="fa fa-plus-circle"
+                            aria-hidden="true"></i>
+                    </div>
+                    <ul class="nav nav-tabs" style="padding: 10px 30px 0px; border: none" id="projectstabs"
+                        role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="myprojects-tab" data-toggle="tab" href="#myprojects"
+                                role="tab" aria-controls="home" aria-selected="true">
+                                <h4 class="tabtitle">My Projects</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="invprojects-tab" data-toggle="tab" href="#invprojects" role="tab"
+                                aria-controls="profile" aria-selected="false">
+                                <h4 class="tabtitle">Invited Projects</h4>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content" id="myTabContent" style="padding: 10px 30px 0px">
+                        <div class="tab-pane fade show active" id="myprojects" role="tabpanel"
+                            aria-labelledby="home-tab">
+                            <div style="background-color: white;">
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex pull-right">
+                                            <div class="bottom"><a><span class="del">Delete</span><i class="fa fa-trash-o"
+                                                        aria-hidden="true"></i></a></div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                    <button type="button" class="btn btn-success mt-auto">Success</button>
+                                    <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                </div> -->
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex pull-right">
+                                            <div class="bottom"><a><span class="del">Delete</span><i class="fa fa-trash-o"
+                                                        aria-hidden="true"></i></a></div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                    <button type="button" class="btn btn-success mt-auto">Success</button>
+                                    <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                </div> -->
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex pull-right">
+                                            <div class="bottom"><a><span class="del">Delete</span><i class="fa fa-trash-o"
+                                                        aria-hidden="true"></i></a></div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                    <button type="button" class="btn btn-success mt-auto">Success</button>
+                                    <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="invprojects" role="tabpanel" aria-labelledby="invprojects-tab">
+                            ...</div>
+                    </div>
+
+                </ng-template>
+            </ngb-panel>
+            <ngb-panel>
+                <ng-template ngbPanelTitle>
+                    <div class="justify-content-between" style="justify-content: space-between; max-width: 100%">
+                        <div class="d-flex pull-left" style="color: #303030;">
+                            <h4 class="tabtitle" style="font-size: 28px; font-weight: bolder">Labs</h4>
+                        </div>
+                        <div class="pull-right"><i class="fa fa-chevron-down"></i></div>
+                    </div>
+                </ng-template>
+                <ng-template ngbPanelContent>
+                    <div class="d-flex justify-content-center">
+                        <h4 class="namsg">You're not currently participating in any labs. <a class="namsg"
+                                href="">Explore</a> and join labs near you!</h4>
+                    </div>
+                </ng-template>
+            </ngb-panel>
+            <ngb-panel>
+                <ng-template ngbPanelTitle>
+                    <div class="justify-content-between" style="justify-content: space-between; max-width: 100%">
+                        <div class="d-flex pull-left" style="color: #303030;">
+                            <h4 class="tabtitle" style="font-size: 28px; font-weight: bolder">Challenges</h4>
+                        </div>
+                        <div class="pull-right"><i class="fa fa-chevron-down"></i></div>
+                    </div>
+                </ng-template>
+                <ng-template ngbPanelContent>
+                    <div class="d-flex float-right add">Add new project &nbsp;&nbsp;<i class="fa fa-plus-circle"
+                            aria-hidden="true"></i>
+                    </div>
+                    <ul class="nav nav-tabs" style="padding: 10px 30px 0px; border: none" id="projectstabs"
+                        role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="followingchall-tab" data-toggle="tab" href="#follchall"
+                                role="tab" aria-controls="following" aria-selected="true">
+                                <h4 class="tabtitle">Following</h4>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="submittedchall-tab" data-toggle="tab" href="#submchall" role="tab"
+                                aria-controls="submitted" aria-selected="false">
+                                <h4 class="tabtitle">Submitted</h4>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content" id="myTabContent" style="padding: 10px 30px 0px">
+                        <div class="tab-pane fade show active" id="follchall" role="tabpanel"
+                            aria-labelledby="followingchall-tab">
+                            <div style="background-color: white;">
+                                <br>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex pull-right">
+                                            <div><a><span class="del">Unfollow</span><i class="fa fa-eye-slash"
+                                                        aria-hidden="true"></i></a></div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                        <button type="button" class="btn btn-success mt-auto">Success</button>
+                                        <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                    </div> -->
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex pull-right">
+                                            <div><a><span class="del">Unfollow</span><i class="fa fa-eye-slash"
+                                                        aria-hidden="true"></i>
+                                                </a></div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                        <button type="button" class="btn btn-success mt-auto">Success</button>
+                                        <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                    </div> -->
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div><img class="projectimg" src="../../assets/images/projectimg.png"></div>
+                                    </div>
+                                    <div class="col-md-8" style="padding: 10px; color: #585858">
+                                        <h4 class="subtitle">Front-End Developer Work Challenge</h4>
+                                        <p class="desc">Redesign of a few key prepr webpages built with Angular and
+                                            Bootstrap.</p>
+                                        <br>
+                                        <div class="d-flex align-bottom">
+                                            <div class="pull-left">
+                                                <a><span class="icon"></span><i class="fas fa-share-alt"></i></a>
+                                            </div>
+                                            <div class="pull-right">
+                                                <a><span class="del">Unfollow</span><i class="fa fa-eye-slash"
+                                                        aria-hidden="true"></i></a>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="d-flex buttoncontainer justify-content-center">
+                                        <button type="button" class="btn btn-success mt-auto">Success</button>
+                                        <button type="button" class="btn btn-danger mt-auto">Danger</button>
+                                    </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="submchall" role="tabpanel" aria-labelledby="submittedchall-tab">
+                            ...</div>
+                    </div>
+
+                </ng-template>
+            </ngb-panel>
+        </ngb-accordion>
+    </div>
+</div>
