--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,14 @@
     font-weight: 600;
 }
 
+h2{
+    font-family: 'Poppins', sans-serif;
+}
+
+body{
+    background-color: whitesmoke;
+}
+
 
 .center{
     text-align: center;
@@ -16,6 +24,69 @@ body{
     margin: 0;
 }
 
+.name-link{
+    color: #484848;
+}
+
+.name-link:hover{
+    text-decoration: none;
+}
+
+.nav-link{
+    color: white;
+    background-color: #8c6;
+    font-weight: 900;
+    text-align: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
+    border-bottom: none;
+}
+
+.nav-tabs .nav-item .nav-link.active {
+    background-color: white;
+    color: #8c6;
+    border-color: white;
+    border-radius: 0;
+    font-weight: 900;
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
+    border-bottom: none;
+  }
+
+  :host /deep/ .card-body {
+    padding: 5px 30px;
+}
+
+:host /deep/ .card {
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
+    border-bottom: none;
+    background-color: white;
+}
+  
+:host /deep/ .card-header {
+    /* border-top: 1px solid rgba(0, 0, 0, 0.125);
+    border-left: 1px solid rgba(0, 0, 0, 0.125);
+    border-right: 1px solid rgba(0, 0, 0, 0.125); */
+    border-bottom: none;
+    background-color: white;
+    width: 100%;
+}
+
+  .tabtitle{
+    /* font-weight: bold; */
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+}
+
+.tab-content{
+    margin: 0px 30px 15px;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+  }
+
+
 .customnav {
     width: 100%;
     height: 65px;
@@ -23,13 +94,18 @@ body{
     line-height: 65px;
     text-align: center;
     z-index: 1;
+    font-family: 'Poppins', sans-serif;
 }
 
 .customnav div.logo {
     float: left;
     width: auto;
     height: auto;
-    padding-left: 2.5rem;
+    padding-left: 1rem;
+}
+
+.logo-img{
+    max-width: 6rem;
 }
 
 .customnav div.logo a {
@@ -57,6 +133,7 @@ body{
 }
 
 .customnav div.main_list ul li {
+    font-family: 'Poppins', sans-serif;
     width: auto;
     height: 65px;
     padding: 0;
@@ -64,6 +141,8 @@ body{
 }
 
 .customnav div.main_list ul li a {
+    font-family: 'Poppins', sans-serif;
+
     text-decoration: none;
     color: #fff;
     line-height: 65px;
@@ -73,9 +152,6 @@ body{
 .customnav div.main_list ul li a:hover {
     color: #00E676;
 }
-
-
-/* Home section */
 
 .navTrigger {
     display: none;
@@ -88,8 +164,6 @@ body{
     transition: all 0.4s ease;
 }
 
-
-/* Media qurey section */
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .container {
@@ -347,6 +421,7 @@ body{
 	padding-right:15%;
 	font-size: 20px;
 }
+
 @media all and (max-width:700px){
 	.myP {
 		padding:2%;
