--- a/src/app/challenge-details/challenge-details.component.html
+++ b/src/app/challenge-details/challenge-details.component.html
@@ -1,10 +1,11 @@
 <nav class="customnav">
     <div class="container-fluid">
         <div class="logo">
-            <a href="#"><img class="logo-img" src="../../assets/images/preprlogo.png"></a>
+            <a href="#"><img class="logo-img" src="../../assets/images/preprlogo-white.png"></a>
         </div>
         <div id="mainListDiv" class="main_list">
             <ul class="navlinks">
+                <li><a href="">Explore</a></li>
                 <li><a href="/my-work">My Work</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="">Profile</a></li>
