--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -1,8 +1,10 @@
 
 .container-fluid{
     background-color: whitesmoke;
-    margin: 0px;
-    padding: 0px 25px;
+}
+
+.tabtitle{
+    font-size: 30px;
 }
 
 p{
@@ -10,6 +12,11 @@ p{
     font-family: "Poppins", sans-serif;
     color:gray;
     font-size: 16px;
+}
+
+.fa{
+    font-size: 20px;
+    color: rgba(47,177,99)
 }
 
 .challengeimg{
@@ -25,12 +32,44 @@ p{
     background-color: white;
 }
 
+.nav-link{
+    border-bottom: none;
+}
+
+.nav-tabs{
+    margin: 0px 70px;
+}
+
 .tab-content{
     background-color: white;
-    height: 90vh;
-    margin: 0px 25px;
-    padding: 20px;
-    border-color: #dee2e6;
+    height: auto;
+    /* margin: 0px 50px; */
+    /* padding: 20px; */
+    border-top: none;
+}
+
+.button-txt{
+    font-family: 'Poppins', sans-serif;
+    margin-left: 0.8rem;
+    font-size: 1rem;
+    color: rgba(47,177,99)
+}
+
+.nav-link:hover{
+    color:white;
+}
+
+.action{
+    font-size: 15px;
+}
+
+.subtitle{
+    font-size: 1.8rem;
+}
+
+.desc{
+    font-family: Arial, sans-serif;
+    font-size: 18px;
 }
 
 .tab-pane{
@@ -82,24 +121,12 @@ h1{
     font-weight: 900;
 }
 
-.nav-tabs .nav-item .nav-link {
-    color: #fff;
-    border-radius: 0;
-
+.projectimg{
+    width: 100%;
 }
 
 .card{
     max-height: 10vh;
-}
-
-.nav-tabs .nav-item .nav-link.active {
-    color: #8c6;
-    border-color: white;
-    border-radius: 0;
-  }
-
-.nav-link{
-    background-color: #8c6;
 }
 
 html,
@@ -109,9 +136,7 @@ body {
     box-sizing: border-box;
     font-size: 62.5%;
     font-size: 10px;
+    height: auto;
+    background-color: whitesmoke;
 }
-/*-- Inspiration taken from abdo steif -->
-/* --> https://codepen.io/abdosteif/pen/bRoyMb?editors=1100*/
-
-/* Navbar section */
 
