--- a/src/app/my-work/my-work.component.css
+++ b/src/app/my-work/my-work.component.css
@@ -2,7 +2,7 @@
 
 .bg{
     height: 65px;
-    background-color: #000;
+    background-color: rgba(47,177,99);
 }
 
 .body{
@@ -25,6 +25,13 @@ p{
     border-bottom: none;
   }
 
+.fa-chevron-down{
+    color: #303030;
+}
+
+  .nav-item{
+      margin: 0;
+  }
 .bottom{
     margin-top: auto;
 }
@@ -48,8 +55,6 @@ p{
       font-size: 1.3rem;
   }
 
-
-
   .subtitle{
       font-weight: bolder;
       color: #484848;
@@ -57,6 +62,14 @@ p{
 
   .buttoncontainer{
       vertical-align: bottom;
+  }
+
+  .name-link{
+      color: #484848;
+  }
+
+  .name-link:hover{
+      text-decoration: none;
   }
 
   .btn{
@@ -118,13 +131,14 @@ p{
 }
   
 :host /deep/ .card-header {
-    /* border-top: 1px solid rgba(0, 0, 0, 0.125);
+    border-top: 1px solid rgba(0, 0, 0, 0.125);
     border-left: 1px solid rgba(0, 0, 0, 0.125);
-    border-right: 1px solid rgba(0, 0, 0, 0.125); */
+    border-right: 1px solid rgba(0, 0, 0, 0.125);
     border-bottom: none;
     background-color: white;
     width: 100%;
 }
+
 .btn-link:hover{
     font-weight: bold;
     text-decoration: none!important;
@@ -149,21 +163,6 @@ h1{
     font-size: 60px;
     font-weight: 900;
 }
-
-.collapse, .collapse.in {
-    display: block !important;
-    transition: all .25s ease-in-out;
-  }
-  
-  .collapse {
-   opacity: 0;
-   height: 0;
-  }
-  
-  .collapse.in {
-    opacity: 1;
-    height: 100%;
-  }
 
   .container-fluid.content{
       padding: 0px 60px;
